add bluesky social

--- a/themes/tria-2019/layout/layout.ejs
+++ b/themes/tria-2019/layout/layout.ejs
@@ -27,7 +27,7 @@
       <p class="social">
         <a class="social-github" href="https://github.com/timgthomas" target="_blank" rel="noopener">GitHub</a>
         <a class="social-codepen" href="https://codepen.io/TimGThomas" target="_blank" rel="noopener">CodePen</a>
-        <a class="social-dribbble" href="https://dribbble.com/timgthomas" target="_blank" rel="noopener">Dribbble</a>
+        <a class="social-bsky" href="https://bsky.app/profile/timgthomas.com" target="_blank" rel="noopener">Bluesky</a>
       </p>
     </div>
   </aside>
