--- a/themes/tria-2019/source/css/style.styl
+++ b/themes/tria-2019/source/css/style.styl
@@ -289,8 +289,8 @@ aside
       & + a
         margin-left 10px
 
-  .social-twitter
-    background-image url('/images/social-twitter.png')
+  .social-bsky
+    background-image url('/images/social-bsky.png')
 
   .social-github
     background-image url('/images/social-github.png')
