--- a/themes/timgthomas/source/css/_content.styl
+++ b/themes/timgthomas/source/css/_content.styl
@@ -93,8 +93,8 @@
 
   img, iframe
     display block
-    max-width 480px
     margin 1.2rem auto
+    max-width @css{min(480px, 90vw)}
 
   // Disqus <iframe> shouldn't follow the same rules.
   iframe#dsq-2
