--- a/themes/timgthomas/source/css/style.styl
+++ b/themes/timgthomas/source/css/style.styl
@@ -375,6 +375,7 @@ aside
       font-size 2.4rem
       font-weight 200
       text-transform uppercase
+      text-wrap balance
 
   p
     color var(--color-body)
