fix page path matcher for new subfolders

--- a/src/pages/[year]/[month]/[slug].astro
+++ b/src/pages/[year]/[month]/[slug].astro
@@ -8,8 +8,13 @@ type Props = CollectionEntry<'blog'>
 
 export const getStaticPaths: GetStaticPaths = async () => {
   const posts = await getCollection('blog')
-  return posts.map((post) => {
-    const [, year, month, , slug] = post.id.match(/^(\d{4})-(\d{2})-(\d{2})-(.+)\.md$/) ?? []
+  return posts.flatMap((post) => {
+    const m = post.id.match(/^(\d{4})-(\d{2})-(\d{2})-(.+)\/index\.md$/)
+    if (!m) {
+      console.warn(`Skipped unmatched post id: ${post.id}`)
+      return []
+    }
+    const [, year, month, , slug] = m
     return { params: { year, month, slug }, props: { post } }
   })
 }
