--- a/src/pages/[year]/[month]/[slug].astro
+++ b/src/pages/[year]/[month]/[slug].astro
@@ -9,7 +9,7 @@ type Props = CollectionEntry<'blog'>
 export const getStaticPaths: GetStaticPaths = async () => {
   const posts = await getCollection('blog')
   return posts.flatMap((post) => {
-    const m = post.id.match(/^(\d{4})-(\d{2})-(\d{2})-(.+)\/index\.md$/)
+    const m = post.id.match(/^(\d{4})-(\d{2})-(\d{2})-(.+)\/index\.md(x?)$/)
     if (!m) {
       console.warn(`Skipped unmatched post id: ${post.id}`)
       return []
