[wip] bring in a post model and next/prev, but having some issues with static paths

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,27 +2,12 @@
 import Layout from '../components/layout.astro'
 // import StructuredData from "@/components/StructuredData.astro";
 // import Comments from "@/components/Comments.astro";
-import { getCollection } from 'astro:content'
 import { formatDate } from '../lib/utils/datetime'
+import { getPosts } from '../lib/models/post'
 
-const posts = (await getCollection('blog'))
-  .map((entry) => {
-    const match = entry.id.match(/^(\d{4})-(\d{2})-(\d{2})-(.+)\.md$/)
-    if (!match) throw new Error(`Bad filename: ${entry.id}`)
+const posts = await getPosts()
 
-    const [, year, month, day, slug] = match
-    return {
-      ...entry,
-      date: new Date(`${year}-${month}-${day}`),
-      slug,
-      year,
-      month,
-    }
-  })
-  .sort((a, b) => b.date.valueOf() - a.date.valueOf())
-
-const firstpost = posts[0]
-const nextpost = posts[1]
+const [firstpost, nextpost] = posts
 
 const { Content } = await firstpost.render()
 
