--- a/src/pages/[year]/[month]/[slug].astro
+++ b/src/pages/[year]/[month]/[slug].astro
@@ -3,25 +3,14 @@ import type { GetStaticPaths } from 'astro'
 import { type CollectionEntry, getCollection, render } from 'astro:content'
 import Layout from '../../../components/layout.astro'
 import { formatDate } from '../../../lib/utils/datetime'
+import { getPosts } from '../../../lib/models/post'
+import PostFooter from '../../../components/post-footer.astro'
 
 type Props = CollectionEntry<'blog'>
 
 export const getStaticPaths: GetStaticPaths = async () => {
-  const posts = await getCollection('blog')
-  return posts.flatMap((post) => {
-    // NOTE: For some reason, the pattern `{post}/index.md` resolves to
-    // `{post.md}` instead
-    const m = post.id.match(/^(\d{4})-(\d{2})-(\d{2})-(.+).md(x?)$/)
-
-    if (!m) {
-      console.warn(`Skipped unmatched post id: ${post.id}`)
-      return []
-    }
-
-    const [, year, month, day, slug] = m
-
-    post.date = new Date(`${year}-${month}-${day}`)
-
+  return (await getPosts()).map((post) => {
+    const { year, month, slug } = post
     return { params: { year, month, slug }, props: { post } }
   })
 }
@@ -31,15 +20,17 @@ const { post } = Astro.props
 const { Content } = await render(post)
 ---
 
-<Layout>
+<Layout title={post.data.title}>
   <div role="main">
     <article>
       <header>
         <h1>{post.data.title}</h1>
         <p>{formatDate(post.date)}</p>
       </header>
+      <p>{post.nextPost.id}</p>
       <!-- <pre>{JSON.stringify(post, null, 2)}</pre> -->
       <Content />
+      <PostFooter {post} />
     </article>
   </div>
 </Layout>
