add site footer

--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -64,5 +64,6 @@ const { /* frontmatter, */ title } = Astro.props
       </div>
     </aside>
     <slot />
+    <footer>&copy; Tim G Thomas</footer>
   </body>
 </html>
