--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,32 +1,27 @@
 ---
 import Layout from '../components/layout.astro'
 import StructuredData from '../components/structured-data.astro'
-import { formatDate } from '../lib/utils/datetime'
 import { getPosts } from '../lib/models/post'
+import { formatDate } from '../lib/utils/datetime'
 
-const posts = await getPosts()
-
-const [firstpost, nextpost] = posts
-
-const { Content } = await firstpost.render()
+const [post, nextPost] = await getPosts()
+const { Content: RenderedPost } = await post.render()
 ---
 
-<Layout title={firstpost.data.title}>
+<Layout title={post.data.title}>
   <div role="main">
     <article>
       <header>
-        <h1>{firstpost.data.title}</h1>
-        <p>{formatDate(firstpost.date)}</p>
+        <h1>{post.data.title}</h1>
+        <p>{formatDate(post.date)}</p>
       </header>
-
-      <Content />
-      <StructuredData post={firstpost} />
+      <RenderedPost />
+      <StructuredData post={post} />
     </article>
-
     <nav>
       <span class="post-nav-prev"></span>
       <span class="post-nav-next">
-        {nextpost && <a href={nextpost.url}>{nextpost.data.title}</a>}
+        {nextPost && <a href={nextPost.url}>{nextPost.data.title}</a>}
       </span>
     </nav>
   </div>
