--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -20,6 +20,7 @@ const { /* frontmatter, */ title } = Astro.props
       type="application/rss+xml"
     />
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <link
       rel="stylesheet"
       href="//fonts.googleapis.com/css?family=Fira+Sans:300,400,500,700,300italic,400italic,500italic,700italic|Fira+Mono"
